--- a/Fundamentos do Desenvolvimento Web/Bloco 3/4/style.css
+++ b/Fundamentos do Desenvolvimento Web/Bloco 3/4/style.css
@@ -1,35 +1,39 @@
-h1, h3, ul{
-    text-align: center;
+h1 {
+  text-align: center;
 }
 
 .first {
-    background-color: rgb(235, 200, 84);
-    font-size: 20px;
-    height: 50px;
-    text-align: center;
-    width: 200px;
-    display: block;
-    margin-left: 625px;
+  background-color: rgb(235, 200, 84);
+  font-size: 20px;
+  height: 50px;
+  text-align: center;
+  width: 200px;
+  display: block;
+  margin-left: 200px;
 }
 
 .second {
-    background-color: rgb(219, 219, 219);
-    font-size: 20px;
-    height: 50px;
-    text-align: center;
-    width: 300px;
-    display: inline-block;
+  background-color: rgb(219, 219, 219);
+  font-size: 20px;
+  height: 50px;
+  text-align: center;
+  width: 300px;
+  display: inline-block;
 }
 
 .third {
-    background-color: rgb(170, 142, 106);
-    font-size: 20px;
-    height: 50px;
-    text-align: center;
-    width: 300px;
-    display: inline-block;
+  background-color: rgb(170, 142, 106);
+  font-size: 20px;
+  height: 50px;
+  text-align: center;
+  width: 300px;
+  display: inline-block;
 }
 
 li {
-    display: inline;
+  display: inline-block;
+}
+
+h3 {
+  text-align: center;
 }
