--- a/FrontEnd/Bloco 12/1/fixation/lifecycleapp/src/App.css
+++ b/FrontEnd/Bloco 12/1/fixation/lifecycleapp/src/App.css
@@ -1,38 +1,95 @@
-.App {
+@import 'https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css';
+
+.card {
+  background-color: aliceblue;
+  border-radius: 25px !important;
+  max-height: 200px;
+  padding: 10px;
+  text-align: center;
+  width: 30vw;
+  max-width: 250px;
+}
+
+
+.c-button {
+  margin-top: 10px;
+}
+
+.c-img {
+  max-width: 100px;
+}
+
+.card-list {
+  margin-top: 20px;
+  width: 100vw;
+}
+
+.central {
+  height: 10vh;
+}
+
+.connections-blue {
+  background-color: lightblue;
+}
+
+.connections-coral {
+  background-color: lightcoral;
+}
+
+
+.counter {
+  margin: 15px 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.git {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
+  height: 40vh;
+  margin: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.git-connections {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  height: 50vh;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.gitNetwork {
+  background-color: lavender;
+  height: 100vh;
+  width: 100vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+  text-align: center;
+  width: 90%;
+}
+
+.myPicture {
+  border: 4px solid white;
+  border-radius: 100%;
+  width: 200px;
+}
+
+img {
+  border-radius: 25px !important;
+}
+
+input {
+  min-width: 150px !important;
+  max-width: 250px;
+}
+
+p {
+  text-align: center;
+}
+
+span {
+  color: #710ece;
+  font-size: x-large;
+  font-weight: 600;
 }
